--- a/services/users/package.json
+++ b/services/users/package.json
@@ -34,5 +34,9 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mongoose": "^4.1.11"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "mocha": "^2.3.3"
   }
 }
