--- a/services/users/package.json
+++ b/services/users/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
-    "start": "node server.js"
+    "test": "istanbul cover _mocha",
+    "start": "node server.js",
+    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "chai": "^3.3.0",
+    "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "supertest": "^1.1.0"
   }
