travis.yml added #18 #5

--- a/services/users/package.json
+++ b/services/users/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "istanbul cover _mocha",
     "start": "node server.js",
-    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js"
+    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js",
+    "clean": "rm -r -f *~ node_modules coverage"
   },
   "repository": {
     "type": "git",
