--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
-  - "4.2.1"
+	- "4.2.1"
+services:
+	- mogodb
 env:
-  - TEST_DIR=services/users/
-script: cd $TEST_DIR && npm install && npm test
+	- TEST_DIR=services/users/
+before_script:
+	- sleep 15
+script:
+	- cd $TEST_DIR && npm install && npm test
