travis mongo fixed (again)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
     - "4.2.1"
 services:
-    - mogodb
+    - mongodb
 env:
     - TEST_DIR=services/users/
 before_script:
