--- a/services/users/package.json
+++ b/services/users/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maelstrom-users",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Users handler with mongoose and JWT for maelstrom",
   "main": "server.js",
   "directories": {
@@ -35,6 +35,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.4.0",
     "mongoose": "^4.1.11"
   },
   "devDependencies": {
