--- a/services/users/package.json
+++ b/services/users/package.json
@@ -10,7 +10,8 @@
     "test": "istanbul cover _mocha",
     "start": "node server.js",
     "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js",
-    "clean": "rm -r -f *~ node_modules coverage"
+    "clean": "rm -r -f *~ node_modules coverage",
+    "coveralls": "npm test -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -40,8 +41,10 @@
   },
   "devDependencies": {
     "chai": "^3.3.0",
+    "coveralls": "^2.11.4",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^1.0.0",
     "supertest": "^1.1.0"
   }
 }
