--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ node_js:
     - "0.10"
 services:
     - mongodb
-env:
-    - TEST_DIR=services/users/
+#env:
+#    - TEST_DIR=services/users/
 before_script:
     - sleep 5
 script:
-    - cd $TEST_DIR && npm install && npm test
+    - npm install && npm test
 after_success:
     - npm run coveralls
