--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install": "npm --prefix services/*/ install services/*/ && rm -r -f services/*/etc/",
-    "test": "istanbul cover _mocha services/*/test/",
+    "test": "istanbul cover --report html _mocha services/*/test/",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "clean": "rm -r -f *~ node_modules coverage && npm --prefix services/*/ run clean services/*/ && rm -r -f services/*/etc/"
   },
