--- a/services/users/package.json
+++ b/services/users/package.json
@@ -35,6 +35,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "express-jwt": "^3.1.0",
     "jsonwebtoken": "^5.4.0",
     "mongoose": "^4.1.11"
   },
