--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"not tested\"",
     "start": "node server.js",
-    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js",
+    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
   },
   "repository": {
     "type": "git",
