--- a/services/users/package.json
+++ b/services/users/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "maelstrom-users",
-  "version": "0.0.4",
-  "description": "Users handler with mongoose and JWT for maelstrom",
-  "main": "server.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "mocha",
-    "start": "node server.js",
-    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/demiurgosoft/maelstrom.git"
-  },
-  "keywords": [
-    "user",
-    "users",
-    "maelstrom",
-    "MMO",
-    "mongoose",
-    "JSW",
-    "token"
-  ],
-  "author": "demiurgosoft <demiurgosoft@hotmail.com>",
-  "license": "AGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/demiurgosoft/maelstrom/issues"
-  },
-  "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
-  "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.14.1",
-    "express": "^4.13.3",
-    "express-jwt": "^3.1.0",
-    "jsonwebtoken": "^5.4.0",
-    "mongoose": "^4.1.11"
-  },
-  "devDependencies": {
-    "chai": "^3.3.0",
-    "mocha": "^2.3.3",
-    "supertest": "^1.1.0",
-    "js-beautify": "^1.5.10"
-  }
+	"name": "maelstrom-users",
+	"version": "0.0.4",
+	"description": "Users handler with mongoose and JWT for maelstrom",
+	"main": "server.js",
+	"directories": {
+		"test": "test"
+	},
+	"scripts": {
+		"test": "mocha",
+		"start": "node server.js",
+		"astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/demiurgosoft/maelstrom.git"
+	},
+	"keywords": [
+		"user",
+		"users",
+		"maelstrom",
+		"MMO",
+		"mongoose",
+		"JSW",
+		"token"
+	],
+	"author": "demiurgosoft <demiurgosoft@hotmail.com>",
+	"license": "AGPL-3.0",
+	"bugs": {
+		"url": "https://github.com/demiurgosoft/maelstrom/issues"
+	},
+	"homepage": "https://github.com/demiurgosoft/maelstrom#readme",
+	"dependencies": {
+		"bcrypt-nodejs": "0.0.3",
+		"body-parser": "^1.14.1",
+		"express": "^4.13.3",
+		"express-jwt": "^3.1.0",
+		"jsonwebtoken": "^5.4.0",
+		"mongoose": "^4.1.11"
+	},
+	"devDependencies": {
+		"chai": "^3.3.0",
+		"mocha": "^2.3.3",
+		"supertest": "^1.1.0",
+		"js-beautify": "^1.5.10"
+	}
 }
