--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -4,7 +4,7 @@
   "description": "Front-End proxy to connect clients and Back-End using Sockets.io",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"not tested\"",
+    "test": "mocha",
     "start": "node server.js",
     "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
   },
