--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "express-jwt": "^3.1.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "istanbul": "^0.4.0"
   }
 }
