--- a/services/users/package.json
+++ b/services/users/package.json
@@ -7,7 +7,7 @@
 		"test": "test"
 	},
 	"scripts": {
-		"test": "mocha",
+		"test": "istanbul cover --report none _mocha",
 		"start": "node server.js",
 		"astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
 	},
@@ -40,8 +40,9 @@
 	},
 	"devDependencies": {
 		"chai": "^3.3.0",
+		"istanbul": "^0.4.0",
+		"js-beautify": "^1.5.10",
 		"mocha": "^2.3.3",
-		"supertest": "^1.1.0",
-		"js-beautify": "^1.5.10"
+		"supertest": "^1.1.0"
 	}
 }
