--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
   "devDependencies": {
     "coveralls": "^2.11.4",
-    "grunt-auto-install": "^0.3.0",
-    "grunt-contrib-clean": "^0.6.0",
     "grunt-mocha-test": "^0.12.7",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3"
   },
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "grunt-auto-install": "^0.3.0",
+    "grunt-contrib-clean": "^0.6.0"
   }
 }
