--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -28,13 +28,13 @@
     "chai": "^3.4.0",
     "js-beautify": "^1.5.10",
     "mocha": "^2.3.3",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "istanbul": "^0.4.0"
   },
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "express-jwt": "^3.1.0",
-    "socket.io": "^1.3.7",
-    "istanbul": "^0.4.0"
+    "socket.io": "^1.3.7"
   }
 }
