--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maelstrom-proxy",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Front-End proxy to connect clients and Back-End using Sockets.io",
   "main": "server.js",
   "scripts": {
@@ -24,17 +24,18 @@
     "url": "https://github.com/demiurgosoft/maelstrom/issues"
   },
   "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "express-jwt": "^3.1.0",
+    "socket.io": "^1.3.7",
+    "socketio-jwt": "^4.3.2"
+    },
   "devDependencies": {
     "chai": "^3.4.0",
     "js-beautify": "^1.5.10",
     "mocha": "^2.3.3",
     "supertest": "^1.1.0",
     "istanbul": "^0.4.0"
-  },
-  "dependencies": {
-    "body-parser": "^1.14.1",
-    "express": "^4.13.3",
-    "express-jwt": "^3.1.0",
-    "socket.io": "^1.3.7"
   }
 }
