--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maelstrom-proxy",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Front-End proxy to connect clients and Back-End using Sockets.io",
   "main": "server.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "chai": "^3.4.0",
     "istanbul": "^0.4.0",
     "js-beautify": "^1.5.10",
+    "jsonwebtoken": "^5.4.1",
     "mocha": "^2.3.3",
     "socket.io-client": "^1.3.7",
     "supertest": "^1.1.0"
