--- a/services/proxy/package.json
+++ b/services/proxy/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
   "dependencies": {
+    "amqplib": "^0.4.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "express-jwt": "^3.1.0",
