--- a/services/world/package.json
+++ b/services/world/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
   "dependencies": {
     "amqplib": "^0.4.0",
-    "jsonwebtoken": "^5.4.1"
-},
+    "jsonwebtoken": "^5.4.1",
+    "mongoose": "^4.2.3",
+    "redis": "^2.2.5"
+  },
   "devDependencies": {
     "chai": "^3.4.0",
     "istanbul": "^0.4.0",
