--- a/services/world/package.json
+++ b/services/world/package.json
@@ -4,7 +4,9 @@
   "description": "Game server to handle maelstrom dynamic world",
   "main": "server.js",
   "scripts": {
-    "test": "istanbul cover --report none mocha"
+    "test": "istanbul cover --report none mocha",
+    "start": "node server.js",
+    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,7 @@
   "dependencies": {
     "amqplib": "^0.4.0",
     "jsonwebtoken": "^5.4.1",
-    "mongoose": "^4.2.3",
-    "redis": "^2.2.5"
+    "mongoose": "^4.2.3"
   },
   "devDependencies": {
     "chai": "^3.4.0",
