--- a/services/world/package.json
+++ b/services/world/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "maelstrom-world",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "Game server to handle maelstrom dynamic world",
 	"main": "server.js",
 	"scripts": {
@@ -31,6 +31,7 @@
 		"mongoose": "^4.2.3"
 	},
 	"devDependencies": {
+		"async": "^1.5.0",
 		"chai": "^3.4.0",
 		"istanbul": "^0.4.0",
 		"js-beautify": "^1.5.10",
