--- a/services/world/package.json
+++ b/services/world/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "maelstrom-world",
-  "version": "0.0.15",
-  "description": "Game server to handle maelstrom dynamic world",
-  "main": "server.js",
-  "scripts": {
-    "test": "istanbul cover --report none _mocha",
-    "start": "node server.js",
-    "astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/demiurgosoft/maelstrom.git"
-  },
-  "keywords": [
-    "maelstrom",
-    "MMO",
-    "economy",
-    "world",
-    "game"
-  ],
-  "author": "demiurgosoft <demiurgosoft@hotmail.com>",
-  "license": "AGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/demiurgosoft/maelstrom/issues"
-  },
-  "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
-  "dependencies": {
-    "amqplib": "^0.4.0",
-    "jsonwebtoken": "^5.4.1",
-    "mongoose": "^4.2.3",
-    "mysql": "^2.9.0"
-  },
-  "devDependencies": {
-    "async": "^1.5.0",
-    "chai": "^3.4.0",
-    "istanbul": "^0.4.0",
-    "js-beautify": "^1.5.10",
-    "mocha": "^2.3.3"
-  }
+	"name": "maelstrom-world",
+	"version": "0.0.15",
+	"description": "Game server to handle maelstrom dynamic world",
+	"main": "server.js",
+	"scripts": {
+		"test": "istanbul cover --report none _mocha",
+		"start": "node server.js",
+		"astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/demiurgosoft/maelstrom.git"
+	},
+	"keywords": [
+		"maelstrom",
+		"MMO",
+		"economy",
+		"world",
+		"game"
+	],
+	"author": "demiurgosoft <demiurgosoft@hotmail.com>",
+	"license": "AGPL-3.0",
+	"bugs": {
+		"url": "https://github.com/demiurgosoft/maelstrom/issues"
+	},
+	"homepage": "https://github.com/demiurgosoft/maelstrom#readme",
+	"dependencies": {
+		"amqplib": "^0.4.0",
+		"jsonwebtoken": "^5.4.1",
+		"knex": "^0.9.0",
+		"mongoose": "^4.2.3",
+		"mysql": "^2.9.0"
+	},
+	"devDependencies": {
+		"async": "^1.5.0",
+		"chai": "^3.4.0",
+		"istanbul": "^0.4.0",
+		"js-beautify": "^1.5.10",
+		"mocha": "^2.3.3"
+	}
 }
