--- a/services/world/package.json
+++ b/services/world/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "maelstrom-world",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"description": "Game server to handle maelstrom dynamic world",
 	"main": "server.js",
 	"scripts": {
 		"test": "istanbul cover --report none _mocha",
 		"start": "node server.js",
-		"astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js app/*/*.js config/*.js test/*.js test/*/*.js package.json"
+		"astyle": "js-beautify --indent-with-tabs --brace-style collapse -r *.js app/*.js config/*.js test/*.js test/*/*.js package.json"
 	},
 	"repository": {
 		"type": "git",
