--- a/services/world/package.json
+++ b/services/world/package.json
@@ -27,6 +27,7 @@
 	"homepage": "https://github.com/demiurgosoft/maelstrom#readme",
 	"dependencies": {
 		"amqplib": "^0.4.0",
+		"express": "^4.13.3",
 		"jsonwebtoken": "^5.4.1",
 		"knex": "^0.9.0",
 		"mongoose": "^4.2.3",
