--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "maelstrom",
-  "version": "0.2.3",
+  "version": "0.4.1",
   "description": "economic RTS-MMO ",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "clean": "grunt clean"
+    "test": "istanbul cover _mocha maelstrom-users/test maelstrom-world/test",
+    "postinstall": "bash install.sh",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,8 @@
   },
   "homepage": "https://github.com/demiurgosoft/maelstrom#readme",
   "devDependencies": {
-    "coveralls": "^2.11.4",
-    "grunt-mocha-test": "^0.12.7",
-    "istanbul": "^0.4.0",
-    "mocha": "^2.3.3"
-  },
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.7.0"
+    "coveralls": "^2.11.9",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.4.5"
   }
 }
